<resources>
    <string name="app_name">LVS</string>
    
    <string name="permission_rationale" translatable="false">"Internet permissions are needed."</string>
    <string name="password_hint">Password</string>
    <string name="user_id_hint">User Id</string>
    <string name="login">Login</string>
    <string name="empty_password_error">Password can not be empty</string>
    <string name="empty_user_error">User Id can not be empty</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <!--Main Activity navigation drawer items-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="mail">Mail</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Sent</string>
    <string name="marks">Marks</string>
    <string name="notes">Notes</string>
    <string name="teaching_staff">Teaching Staff</string>
    <string name="schedule">Schedule</string>
    <string name="administrative_staff">Administrative Staff</string>
    <string name="home">Home</string>

    
    <string name="action_settings">Settings</string>
    <string name="no_internet_error">No internet Connection</string>
    <string name="retry">Retry</string>


    <!--email long click menu -->
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="reply_all">Reply all</string>

    <string-array name="emailListContextMenu">
        <item>@string/reply</item>
        <item>@string/reply_all</item>
        <item>@string/forward</item>
        <item>@string/delete</item>
    </string-array>


    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="old_passord_error">Old Password Doesn\'t match !!</string>
    <string name="payments">Payments</string>
    <string name="call_us">Call Us</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Sign Out</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="profile">Profile</string>
    <string name="inbox_is_empty">No emails</string>

    <string name="dialog_title">Insert link</string>
    <string name="dialog_edit_hint" translatable="false">http(s)://</string>

    <!-- Toast -->
    <string name="toast_bold" translatable="false">Bold</string>
    <string name="toast_italic" translatable="false">Italic</string>
    <string name="toast_underline" translatable="false">Underline</string>
    <string name="toast_strikethrough" translatable="false">Strikethrough</string>
    <string name="toast_bullet" translatable="false">Bullet</string>
    <string name="toast_quote" translatable="false">Quote</string>
    <string name="toast_insert_link" translatable="false">Insert link</string>
    <string name="toast_format_clear" translatable="false">Format clear</string>
    <string name="title_activity_email_view">Email View</string>
    <string name="title_text_view_transition" translatable="false">TITLE_TEXT_VIEW_TRANSITION</string>
    <string name="sender_text_view_transition" translatable="false">SENDER_TEXT_VIEW_TRANSITION</string>
    <string name="error">Error</string>
    <string name="date_text_view_transition" translatable="false">DATE_TEXT_VIEW_TRANSITION</string>
    <string name="title_activity_compose_email">Compose Email</string>
    <string name="cntx_menu_item_extra_key" translatable="false">CONTEXT_MENU_ITEM_EXTRA</string>
    <string name="days">days</string>
    <string name="present_days">Present Days :</string>
    <string name="exit_msg">Press again to exit</string>
    <string name="contact_not_allowed_err_msg">You can\'t contact this person</string>
    <string name="network_error_msg">Network Error</string>
    <string name="done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="no_new_messages">No New Messages</string>
    <string name="no_new_marks">No New Marks</string>
    <string name="no_absence_days">No Absence Days</string>
    <string name="absence">Absence</string>
    <string name="recent_emails">New Emails</string>
    <string name="absence_days">Absence Days :</string>
    <string name="confirm_delete">Confirm Deletion...</string>
    <string name="confirm_delete_2">Are you sure you want to delete this email ?</string>
    <string name="empty_title_eror">Subject Can\'t Be Empty</string>
    <string name="empty_receiver_error">"you should specify one receiver at least "</string>
    <string name="value">Value</string>
    <string name="no">No.</string>
    <string name="date">Last Update</string>
    <string name="total">Tuition</string>
    <string name="total_payments">Total Payments</string>
    <string name="net_total">Remaining of Tuition</string>
    <string name="description" translatable="false">
        من القرية الصغيرة إلى العالم الكبير تبدأُ رحلة النجاح.\n
الفكرة التي راودتنا مطلع عام 1999،هي إنشاء مؤسسةٍ تعليمية تربوية تنهل من إيجابيات منهجٍ رسميٍ رصين عالي المستوى يتم رفده و إثرائه بمواد داعمة تغني ثقافة الطلاب و تمكنهم من الأدوات اللازمة لخوض غمار المستقبل من لغة أجنبية و أسلوب تفكير و حب الاطلاع و البحث.\n
من أجل تحقيق تلك الغايات وفق أعلى المعايير تم افتتاح مدرسة القرية الصغيرة عام 1999 إذ تم التدرج بافتتاح المراحل بدءاً من المرحلة التحضيرية والصفوف الأولى وأخذت المدرسة تكبر مع أبنائها حتى اكتملت المراحل الدراسية كاملةً.\n
نمت المدرسة من مبنى بمساحة 800م2 على أرض مساحتها 4000م2 إلى أن أصبحت تضم أربعة مبانيّ ومسرحاً وصالة رياضية مغلقة ومجموعةً من ملاعب كرة السلة وكرة القدم ومسبحاً وأبنية خدمية من مطاعم ومبانيّ ترفيهية ومبانيّ للأنشطة بحيث بلغت مساحة الأبنية ما يقارب الـ20000م2 على أرضٍ مساحتها حوالي الـ 40000م2.\n
وازداد عدد الطلاب من 190طالباً عند الافتتاح لعام 1999 ليبلغ حوالي الـ 3000 طالب بعد عشر سنوات ولم يُخيب أبناء مدرسة القرية الصغيرة أمل الإدارة بهم.\n
فعلى الصعيد العلمي تفخر إدارة المدرسة بتفوق أبنائها وليس أدل على ذلك من نسب النجاح في الشهادتين الإعدادية والثانوية التي حافظت على نسبة 100% نجاح وحصولهم على المراتب الأولى على المحافظة في كل دورة.\n
كذلك تفوق أولئك الطلاب عند تقدمهم لفحوص عالمية مثل IGCSE بحصولهم على معدلات ممتازة أعلى من تلك التي يحصل عليها عادة قرناؤهم في المدارس التي تعتمد ذلك المنهاج فقط. ولم يقتصر تفوق طلاب المدرسة على المجال العلمي بل امتد ليشمل التفوق الرياضي فقد حازوا وباستمرار على المراتب الأولى في جميع البطولات الرياضية المدرسية التي شاركوا بها.\n
شارك طلاب المدرسة في مهرجانات ومناسبات عالمية مثلوا عامين محدديين من فيها بلدهم أفضل تمثيل.\n
على الصعيد الفني عُرفت مدرسة القرية الصغيرة بضخامة أعمالها الفنية التي تهدف لرعاية مواهب أبنائها وتنمية شخصياتهم إذ قدمت احتفاليات وعروض يشارك فيها المئات من أبنائها إلى جانب نخبةً من فناني ونجوم سورية.\n
وتتابع إدارة المدرسة إنجازات الخريجين من أبنائها وتفوقهم الدراسي وحياتهم العملية بكثيرٍ من الفخر والتقدير والمحبة.\n
خطواتنا تلك على طريق حلمنا الكبير ستستمر على الرُغم من الصعاب والظروف التي حالت دون تحقيق طموحاتٍ ورؤىً وأهداف في مواعيدها، لكنّ الإصرار والإرادة والأمل أسلحةٌ لن نتخلى عنها إيماناً منا بأن عملية بناء إنسانِ الغد تبدأ بقرار جريءٍ ينطلق في طريقٍ صحيحٍ نحو هدفٍ كبير.\n
    </string>
    <string name="schedual_has_not_been_uploaded">Schedule Has not been uploaded …</string>
    
    <string name="alert">Alert</string>
    <string name="permission_alert">To save attachment you should allow the app to access storage</string>
    
    
    <string name="delete_old_version">Delete Old Version</string>
    <string name="delete_old_version_msg" formatted="true">We have found that there is an old version of the application installed on your device.\nPlease uninstall it</string>


</resources>
