<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/parentView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:scrollbarSize="5dp"
    android:scrollbarThumbVertical="@drawable/scrollbar"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:contentPadding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recent_emails"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/emailsInRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:layoutDirection="ltr"
            android:focusableInTouchMode="true"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/loadingNewInboxPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/newInboxEmptyTxtV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/no_new_messages"
            android:visibility="gone"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:contentPadding="10dp"
            app:cardCornerRadius="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marks"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/marksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/loadingMarksPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/marksEmptyTxtV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/no_new_marks"
            android:visibility="gone"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:contentPadding="10dp"
            app:cardCornerRadius="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/absence"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </android.support.v7.widget.CardView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_margin="10dp"
            android:useDefaultMargins="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/present_days"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/presentDaysCountTxtV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    android:textColor="#00AA00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absence_days"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/absenceDaysCountTxtV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textColor="#CC0000"/>
        </GridLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/absenceDatesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/loadingAbsencePB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/absenceEmptyTxtV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/no_absence_days"
            android:visibility="gone"/>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>