<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.littlevillageschool.lvs.Activities.MarksFragment">
    
    <Spinner
        android:id="@+id/studentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:visibility="visible"/>
    
    <LinearLayout
        android:id="@+id/paymentSumaryLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/studentSpinner"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00b415"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ced600"
            android:gravity="center"
            android:text="@string/total_payments"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ed323f"
            android:gravity="center"
            android:text="@string/net_total"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/paymentSumaryLL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paymentSumaryLL"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/totalTxtV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00b415"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="0"
            android:textSize="16sp"/>
        
        <TextView
            android:id="@+id/paymentsSumTxtV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ced600"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="0"
            android:textSize="16sp"/>
        
        <TextView
            android:id="@+id/netTotalTxtV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ed323f"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="0"
            android:textSize="16sp"/>
    
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/tableHeaderLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paymentSumaryLL2"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/payment_text_bg"
            android:gravity="center_horizontal"
            android:text="@string/no"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0.5dp"
            android:layout_weight="3"
            android:background="@drawable/payment_text_bg"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/value"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0.5dp"
            android:layout_weight="3"
            android:background="@drawable/payment_text_bg"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>
    
    </LinearLayout>
    
    <ProgressBar
        android:id="@+id/loadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/paymentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tableHeaderLL"
        android:scrollbarSize="5dp"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical"
        app:spanCount="3"/>

</RelativeLayout>
