<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/loginParentRLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh_bg"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    tools:context=".Activities.LoginActivity">


    <ImageView
        android:id="@+id/loginLogoImgV"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/little_village_logo_512"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userIdTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLogoImgV"
        android:layout_marginTop="20dp"
        android:background="#44000000"
        android:visibility="invisible">

        <EditText
            android:id="@+id/userIdEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_portrait_black_24dp"
            android:gravity="center_horizontal"
            android:hint="@string/user_id_hint"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#fff"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userIdTextInput"
        android:layout_marginTop="10dp"
        android:background="#44000000"
        android:visibility="invisible">

        <EditText
            android:id="@+id/passwordEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_vpn_key_black_24dp"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#fff"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextInput"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="#fff"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <com.github.silvestrpredko.dotprogressbar.DotProgressBar
        android:id="@+id/dot_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/passwordTextInput"
        android:visibility="gone"
        app:amount="5"
        app:duration="@android:integer/config_shortAnimTime"
        app:endColor="@color/colorAccent"
        app:startColor="@color/colorPrimaryDark"/>

</LinearLayout>
